After change in image path

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         } else {
           // Switch to light mode
           body.style.backgroundColor = "#fff";
-          body.style.backgroundImage = "url('/weather/LightImg.jpg')";
+          body.style.backgroundImage = "url('/weather/lightImg.jpg')";
           border.style.borderColor = "#000";
           div.forEach((div) => {
             div.style.color = "#000";
